Default blank value for EMAIL in in db
enabled date 0x in late modify edit scripts
Created Receipts folder