@@ -1,3 +1,4 @@
-Default blank value for EMAIL in in db
+Default blank value for EMAIL in  db
 enabled date 0x in late modify edit scripts
 Created Receipts folder
+Added Importing Emails from csv instead of excel
